Add CSIT helm charts for policy
Added helm charts for api, pap, apex-pdp and policy-participant.

Issue-ID: POLICY-4457
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I10d721d17d773b3226dbd0473c3d55dae3be42a4

--- a/helm/policy/Chart.yaml
+++ b/helm/policy/Chart.yaml
@@ -33,3 +33,19 @@ dependencies:
     version: ~11.x-0
     repository: 'file://components/policy-models-simulator'
     condition: policy-models-simulator.enabled
+  - name: policy-api
+    version: ~11.x-0
+    repository: 'file://components/policy-api'
+    condition: policy-api.enabled
+  - name: policy-pap
+    version: ~11.x-0
+    repository: 'file://components/policy-pap'
+    condition: policy-pap.enabled
+  - name: policy-apex-pdp
+    version: ~11.x-0
+    repository: 'file://components/policy-apex-pdp'
+    condition: policy-apex-pdp.enabled
+  - name: policy-clamp-ac-pf-ppnt
+    version: ~11.x-0
+    repository: 'file://components/policy-clamp-ac-pf-ppnt'
+    condition: policy-clamp-ac-pf-ppnt.enabled
