--- a/helm/policy/values.yaml
+++ b/helm/policy/values.yaml
@@ -17,7 +17,7 @@
 #################################################################
 
 global:
-  aafEnabled: true
+  aafEnabled: false
   mariadb:
     # '&mariadbConfig' means we "store" the values for  later use in the file
     # with '*mariadbConfig' pointer.
@@ -30,33 +30,6 @@ global:
   kafkaBootstrap: strimzi-kafka-bootstrap
   policyKafkaUser: policy-kafka-user
 
-#################################################################
-# Secrets metaconfig
-#################################################################
-secrets:
-  - uid: db-root-password
-    name: &dbRootPassSecretName 'policy-db-root-password'
-    type: password
-    externalSecret: '{{ ternary "" (tpl (default "" (index .Values "mariadb-galera" "rootUser" "externalSecret")) .) (hasSuffix "policy-db-root-password" (index .Values "mariadb-galera" "rootUser" "externalSecret"))}}'
-    password: '{{ (index .Values "mariadb-galera" "rootUser" "password") }}'
-    policy: generate
-  - uid: db-secret
-    name: &dbSecretName 'policy-db-secret'
-    type: basicAuth
-    externalSecret: '{{ ternary "" (tpl (default "" (index .Values "mariadb-galera" "db" "externalSecret")) .) (hasSuffix "policy-db-secret" (index .Values "mariadb-galera" "db" "externalSecret"))}}'
-    login: '{{ index .Values "mariadb-galera" "db" "user" }}'
-    password: '{{ index .Values "mariadb-galera" "db" "password" }}'
-    passwordPolicy: generate
-  - uid: policy-app-user-creds
-    name: &policyAppCredsSecret 'policy-app-user-creds'
-    type: basicAuth
-    externalSecret: '{{ tpl (default "" .Values.config.policyAppUserExternalSecret) . }}'
-    login: '{{ .Values.config.policyAppUserName }}'
-    password: '{{ .Values.config.policyAppUserPassword }}'
-    passwordPolicy: generate
-
-db: &dbSecretsHook
-  credsExternalSecret: *dbSecretName
 
 policy-models-simulator:
   enabled: true
@@ -64,9 +37,15 @@ policy-clamp-ac-k8s-ppnt:
   enabled: true
 policy-clamp-runtime-acm:
   enabled: true
-  db: *dbSecretsHook
-  config:
-    appUserExternalSecret: *policyAppCredsSecret
+policy-api:
+  enabled: true
+policy-pap:
+  enabled: true
+policy-apex-pdp:
+  enabled: true
+policy-clamp-ac-pf-ppnt:
+  enabled: true
+
 
 #################################################################
 # DB configuration defaults.
@@ -143,10 +122,7 @@ mariadb-galera:
   db:
     user: policy-user
     # password:
-    externalSecret: *dbSecretName
     name: &mysqlDbName policyadmin
-  rootUser:
-    externalSecret: *dbRootPassSecretName
   nameOverride: *mariadb-galera
   # mariadb-galera.service and global.mariadb.service must be equals
   service: *mariadbService
@@ -156,6 +132,12 @@ mariadb-galera:
     mountSubPath: policy/maria/data
   serviceAccount:
     nameOverride: *mariadb-galera
+
+restServer:
+  policyPapUserName: policyadmin
+  policyPapUserPassword: zb!XztG34
+  policyApiUserName: policyadmin
+  policyApiUserPassword: zb!XztG34
 
 # Resource Limit flavor -By Default using small
 # Segregation for Different environment (small, large, or unlimited)
