Add robot framework helm chart for CSIT
Steps to run policy csit in kubernetes is updated in the README.md

Issue-ID: POLICY-4532
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I116658dfafd4e70bd256173f046da72af6803eaa

--- a/helm/policy/components/policy-apex-pdp/values.yaml
+++ b/helm/policy/components/policy-apex-pdp/values.yaml
@@ -29,7 +29,7 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-image: nexus3.onap.org:10001/onap/policy-apex-pdp:2.8.1
+image: nexus3.onap.org:10001/onap/policy-apex-pdp:2.9-SNAPSHOT-latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
