--- a/helm/policy/components/policy-api/values.yaml
+++ b/helm/policy/components/policy-api/values.yaml
@@ -29,7 +29,7 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-image: nexus3.onap.org:10001/onap/policy-api:2.7.1
+image: nexus3.onap.org:10001/onap/policy-api:2.8-SNAPSHOT-latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
