Fix robot failures in kubernetes CSITs
Api, Pap, Clamp configurations are fixed
Update Readiness containers as a list entity to wait for more than one component.

Issue-ID: POLICY-4546
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I8598ddc01905b072edd9eb3030a83d3d806a14eb

--- a/helm/policy/components/policy-apex-pdp/values.yaml
+++ b/helm/policy/components/policy-apex-pdp/values.yaml
@@ -38,7 +38,7 @@ debugEnabled: false
 # application configuration
 
 restServer:
-  user: healthcheck
+  user: policyadmin
   password: zb!XztG34
 
 
