--- a/helm/policy/components/policy-api/resources/config/apiParameters.yaml
+++ b/helm/policy/components/policy-api/resources/config/apiParameters.yaml
@@ -17,7 +17,7 @@
 #  ============LICENSE_END=========================================================
 
 server:
-  port: {{ .Values.service.internalPort }}
+  port: {{ .Values.service.port }}
   ssl:
     enabled: false
   servlet:
