--- a/helm/policy/components/policy-api/templates/service.yaml
+++ b/helm/policy/components/policy-api/templates/service.yaml
@@ -24,16 +24,16 @@ metadata:
   name: {{ .Chart.Name }}
   namespace: default
   labels:
-    app: {{ .Chart.Name }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: release
-    heritage: Helm
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: Helm
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
+      nodePort: {{ .Values.service.nodePort }}
+      protocol: TCP
       name: {{ .Values.service.portName }}
   selector:
-    app: {{ .Chart.Name }}
-    release: release
+    app.kubernetes.io/name: {{ .Chart.Name }}
