--- a/csit/metrics/prometheus.yml
+++ b/csit/metrics/prometheus.yml
@@ -1,6 +1,6 @@
 #
 # ===========LICENSE_START====================================================
-#  Copyright (C) 2022 Nordix Foundation.
+#  Copyright (C) 2022-2023 Nordix Foundation.
 # ============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -32,6 +32,7 @@ alerting:
 scrape_configs:
 
   - job_name: "api-metrics"
+    metrics_path: /policy/api/v1/metrics
     static_configs:
       - targets: ["policy-api:6969"]
     basic_auth:
@@ -39,6 +40,7 @@ scrape_configs:
       password: "zb!XztG34"
 
   - job_name: "pap-metrics"
+    metrics_path: /policy/pap/v1/metrics
     static_configs:
       - targets: ["policy-pap:6969"]
     basic_auth:
