Fix test failures in K8s apex-pdp CSIT
Add json response files
Update sim hostnames to message-router in policy definitions

Issue-ID: POLICY-4546
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I1bed6e4077c7e52b986bcb927204819ec0d95d99

--- a/helm/policy/components/policy-models-simulator/templates/deployment.yaml
+++ b/helm/policy/components/policy-models-simulator/templates/deployment.yaml
@@ -52,6 +52,12 @@ spec:
             - mountPath: /opt/app/policy/simulators/etc/mounted/
               name: simconfig
               readOnly: true
+            - mountPath: /opt/app/policy/simulators/etc/mounted/cdsresponse/
+              name: cdsconfig
+              readOnly: true
+            - mountPath: /opt/app/policy/simulators/etc/mounted/aairesponse
+              name: aaiconfig
+              readOnly: true
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
@@ -70,4 +76,12 @@ spec:
         - name: simconfig
           configMap:
             name: {{ include "policy-models-simulator.fullname" . }}-configmap
+            defaultMode: 0755
+        - name: cdsconfig
+          configMap:
+            name: {{ include "policy-models-simulator.fullname" . }}-cds-configmap
+            defaultMode: 0755
+        - name: aaiconfig
+          configMap:
+            name: {{ include "policy-models-simulator.fullname" . }}-aai-configmap
             defaultMode: 0755
