--- a/helm/policy/components/policy-models-simulator/templates/configmap.yaml
+++ b/helm/policy/components/policy-models-simulator/templates/configmap.yaml
@@ -10,3 +10,29 @@ metadata:
 data:
 {{ tpl (.Files.Glob "resources/config/*.{json,xml}").AsConfig . | indent 2 }}
 {{ tpl (.Files.Glob "resources/cds/*.{json,xml}").AsConfig . | indent 2 }}
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+ name: {{ include "policy-models-simulator.fullname" . }}-cds-configmap
+ labels:
+   app: {{ include "policy-models-simulator.name" . }}
+   chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+   heritage: {{ .Release.Service }}
+data:
+{{ tpl (.Files.Glob "resources/cdsresponse/*.{json,xml}").AsConfig . | indent 2 }}
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+ name: {{ include "policy-models-simulator.fullname" . }}-aai-configmap
+ labels:
+   app: {{ include "policy-models-simulator.name" . }}
+   chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+   heritage: {{ .Release.Service }}
+data:
+{{ tpl (.Files.Glob "resources/aairesponse/*.{json,xml}").AsConfig . | indent 2 }}
