--- a/policy-jre/alpine/pom.xml
+++ b/policy-jre/alpine/pom.xml
@@ -2,7 +2,7 @@
   ============LICENSE_START=======================================================
    Copyright (C) 2019 Ericsson, Tieto. All rights reserved.
    Modifications Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
-   Modifications Copyright (C) 2022 Nordix Foundation.
+   Modifications Copyright (C) 2022-2023 Nordix Foundation.
   ================================================================================
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -40,91 +40,6 @@
         <integration.java.name>onap/integration-java11</integration.java.name>
         <integration.java.version>9.0.0</integration.java.version>
     </properties>
-
-    <profiles>
-        <profile>
-            <!-- This profile is activated on Apple M1 architecture to generate the ONAP base images locally -->
-            <id>baseImage</id>
-            <activation>
-                <os>
-                    <arch>aarch64</arch>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-scm-plugin</artifactId>
-                        <version>1.13.0</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.plexus</groupId>
-                                <artifactId>plexus-utils</artifactId>
-                                <version>3.4.2</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.apache.maven.scm</groupId>
-                                <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.13.0</version>
-                            </dependency>
-                        </dependencies>
-                        <configuration>
-                            <connectionType>connection</connectionType>
-                            <checkoutDirectory>src/main/resources/meta</checkoutDirectory>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>checkout-onap-python</id>
-                                <phase>validate</phase>
-                                <configuration>
-                                    <connectionUrl>scm:git:https://gerrit.onap.org/r/integration/docker/onap-java11</connectionUrl>
-                                    <checkoutDirectory>${project.build.directory}/onap-java11</checkoutDirectory>
-                                </configuration>
-                                <goals>
-                                    <goal>checkout</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>io.fabric8</groupId>
-                        <artifactId>docker-maven-plugin</artifactId>
-
-                        <executions>
-                            <execution>
-                                <id>generate-base-image</id>
-                                <phase>initialize</phase>
-                                <configuration>
-                                    <verbose>true</verbose>
-                                    <apiVersion>1.23</apiVersion>
-                                    <pullRegistry>${docker.pull.registry}</pullRegistry>
-                                    <pushRegistry>${docker.push.registry}</pushRegistry>
-                                    <images>
-                                        <image>
-                                            <name>${integration.java.name}</name>
-                                            <build>
-                                                <cleanup>try</cleanup>
-                                                <contextDir>${project.build.directory}/onap-java11</contextDir>
-                                                <dockerFile>BareAlpine.Dockerfile</dockerFile>
-                                                <tags>
-                                                    <tag>${integration.java.version}</tag>
-                                                    <tag>${integration.java.version}-${maven.build.timestamp}</tag>
-                                                    <tag>${project.docker.latest.minmax.tag.version}</tag>
-                                                </tags>
-                                            </build>
-                                        </image>
-                                    </images>
-                                </configuration>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
