Add volume mount for storing k8s robot logs to the host
Issue-ID: POLICY-4546
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I498aa9db39d6b04e685a893c9bca41c6bb108265

--- a/helm/robot/templates/test-job.yaml
+++ b/helm/robot/templates/test-job.yaml
@@ -49,4 +49,11 @@ spec:
             - name: ROBOT_FILE
               value: {{ .Values.robot }}
           command: [ "./run-test.sh", "$(ROBOT_FILE)" ]
+          volumeMounts:
+            - name: robot-csit-pv
+              mountPath: /tmp
       restartPolicy: Never
+      volumes:
+        - name: robot-csit-pv
+          hostPath:
+            path: {{ .Values.robotLogDir }}
