Add helm charts for drools,xacml pdps
Robot test files will be included in a common directory as part of the CSIT refactoring work.

Issue-ID: POLICY-4542
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I0915bb9801d483a9ce382a8c6978de6138c86d72

--- a/helm/policy/values.yaml
+++ b/helm/policy/values.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2022 Nordix Foundation
+# Copyright © 2022-2023 Nordix Foundation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -44,6 +44,10 @@ policy-pap:
 policy-apex-pdp:
   enabled: true
 policy-clamp-ac-pf-ppnt:
+  enabled: true
+policy-drools-pdp:
+  enabled: true
+policy-xacml-pdp:
   enabled: true
 
 
