Add helm charts for drools,xacml pdps in CSIT
Issue-ID: POLICY-4542
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I0915bb9801d483a9ce382a8c6978de6138c86d72

--- a/helm/policy/Chart.yaml
+++ b/helm/policy/Chart.yaml
@@ -49,3 +49,11 @@ dependencies:
     version: ~11.x-0
     repository: 'file://components/policy-clamp-ac-pf-ppnt'
     condition: policy-clamp-ac-pf-ppnt.enabled
+  - name: policy-drools-pdp
+    version: ~11.x-0
+    repository: 'file://components/policy-drools-pdp'
+    condition: policy-drools-pdp.enabled
+  - name: policy-xacml-pdp
+    version: ~11.x-0
+    repository: 'file://components/policy-xacml-pdp'
+    condition: policy-xacml-pdp.enabled
