--- a/helm/policy/values.yaml
+++ b/helm/policy/values.yaml
@@ -45,6 +45,10 @@ policy-apex-pdp:
   enabled: true
 policy-clamp-ac-pf-ppnt:
   enabled: true
+policy-drools-pdp:
+  enabled: true
+policy-xacml-pdp:
+  enabled: true
 
 
 #################################################################
